Finalize DI with interface

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "twig/twig": "^3.0",
         "symfony/asset": "^5.1",
         "illuminate/database": "^7.29",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "doctrine/annotations": "^1.11",
+        "symfony/finder": "^5.2"
     },
     "autoload": {
         "psr-4": {
